Make sure that a tags in p tags have some left and right spacing

--- a/services/QuillLMS/app/assets/stylesheets/pages/college_board.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/college_board.scss
@@ -315,6 +315,8 @@
             line-height: 1.5;
             color: black;
             a {
+              margin-right: 0.4em;
+              margin-left: 0.4em;
               text-decoration: underline;
             }
           }
